// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`markdown should markdown works about gemoji 1`] = `
"<p>😄 👼
👍 💨</p>
"
`;

exports[`markdown should markdown works about gemoji 2`] = `
"<p>😄 👼<br>
👍 💨</p>
"
`;

exports[`markdown should markdown works about normal case 1`] = `
"<h1>Heading 1</h1>
<h2>Heading 2</h2>
<p>normal <strong>bold</strong> text</p>
"
`;

exports[`markdown should works about replace link 1`] = `
"<p><a href=\\"readme.md\\">abc</a><br>
<a href=\\"./readme.md\\">exact link</a></p>
"
`;

exports[`markdown should works about replace link with fromUrl 1`] = `
"<p><a href=\\"http://github.com/telescopejs/telescope/readme.md\\">abc</a>\\\\</p>
"
`;

exports[`markdown should works about task lists 1`] = `
"<p>[x] not ok</p>
<ul class=\\"contains-task-list\\">
<li class=\\"task-list-item\\"><input class=\\"task-list-item-checkbox\\" checked=\\"\\" disabled=\\"\\" type=\\"checkbox\\"> done</li>
<li>[] NOT matching</li>
<li class=\\"task-list-item\\"><input class=\\"task-list-item-checkbox\\" disabled=\\"\\" type=\\"checkbox\\"> todo</li>
</ul>
"
`;

exports[`markdown should works about yaml preamble 1`] = `
"<p>not matching</p>
<hr>
<h2>title: abc
tags: [a, b, c]</h2>
"
`;

exports[`markdown should works about yaml preamble 2`] = `
"<table>
<thead>
<tr>
<th>title</th>
<th>tags</th>
</tr>
</thead>
<tbody>
<tr>
<td>abc</td>
<td>a,b,c</td>
</tr>
</tbody>
</table>
"
`;
